# sixtron_co2_sensor

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mbed_6tron-courses_lorawan.lib  mbed_app.json
inc/: SCD4x_driver.hpp  lora_radio_helper.h
src/: SCD4x_driver.cpp
src/driver/include/: SCD4x_driver.hpp
src/src/: main.cpp
